--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.11-SNAPSHOT'
+    id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -12,7 +12,8 @@ group = project.maven_group
 
 repositories {
     maven { url 'https://maven.nucleoid.xyz' }
-    maven { url 'https://jitpack.io' }
+    maven { url 'https://api.modrinth.com/maven' }
+    mavenCentral()
 }
 
 dependencies {
@@ -23,9 +24,10 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation include("eu.pb4:polymer:0.2.0-rc.2+1.18.2")
-    modImplementation include("fr.catcore:server-translations-api:1.4.12+1.18.2")
-    modImplementation 'com.github.astei:lazydfu:0.1.2'
+    modImplementation include("eu.pb4:polymer:0.2.2+1.19")
+    modImplementation include("eu.pb4:sgui:1.1.1+1.19")
+    modImplementation include("fr.catcore:server-translations-api:1.4.14+1.19-rc2")
+    modImplementation("maven.modrinth:lazydfu:0.1.3")
 }
 
 processResources {
