--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation include("eu.pb4:polymer:0.2.6+1.19")
+    modImplementation include("eu.pb4:polymer-autohost:0.1.1+1.19")
     modImplementation include("eu.pb4:sgui:1.1.1+1.19")
     modImplementation include("fr.catcore:server-translations-api:1.4.14+1.19-rc2")
     modImplementation("maven.modrinth:lazydfu:0.1.3")
