--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
     maven { url 'https://api.modrinth.com/maven' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url = "https://maven.terraformersmc.com/" }
-    maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url = "https://maven.ladysnake.org/releases" }
     mavenCentral()
 }
 
